Fix modal rendering on mobile

--- a/css/submodal.css
+++ b/css/submodal.css
@@ -1,42 +1,40 @@
-#popupMask {
+#popupMask,
+#popupContainer {
   position: fixed;
-  top: 0;
-  left: 0;
+  left: 0px;
   width: 100%;
-  height: 100%;
-  background: #000;
   display: none;
-  filter: alpha(opacity=0);
-  -moz-opacity: 0;
   opacity: 0;
-  -o-transition: opacity 0.3s;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
+}
+
+#popupMask {
+  top: 0px;
+  height: 100%;
+  background: #000;
   z-index: 200;
 }
 #popupMask.on {
-  filter: alpha(opacity=70);
-  -moz-opacity: 0.7;
   opacity: 0.7;
 }
 
 #popupContainer {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  display: none;
-  filter: alpha(opacity=0);
-  -moz-opacity: 0;
+  top: 50%;
+  text-align: center;
   z-index: 201;
 }
+#popupContainer.on {
+  opacity: 1;
+}
 
+/*
 #popupInner {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
+*/
 
 #popupContent {
   position: relative;
@@ -117,14 +115,14 @@
 }
 #suggestresult #suggestionlist {
   list-style: none;
-  padding: 0;
+  padding: 0px;
 }
 #wordresult a {
   cursor: pointer;
 }
 #wordresult h1 {
   display: inline-block;
-  margin-top: 0;
+  margin-top: 0px;
   margin-bottom: 10px;
 }
 #wordresult ul {
@@ -138,8 +136,6 @@
 }
 #wordresult .phanloai {
   background: #e6e6e6;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
   border-radius: 4px;
   display: block;
   font-weight: bold;
